--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading"><a href="{{ site.base_url }}/">{{ site.title }}</a> | <a href="http://mazda3revolution.com/forums/2014-2016-mazda-3-skyactiv-audio-electronics/122458-aio-all-one-tweaks.html">Mazda3Revolution Thread</a> | <a href="mailto:Trez@mazdatweaks.com?subject=MazdaTweaks%20Contact">Contact</a></h2>
+    <h2 class="footer-heading"><a href="{{ site.base_url }}/">{{ site.title }}</a> | <a href="//mazda3revolution.com/forums/2014-2016-mazda-3-skyactiv-audio-electronics/122458-aio-all-one-tweaks.html">Mazda3Revolution Thread</a> | <a href="mailto:Trez@mazdatweaks.com?subject=MazdaTweaks%20Contact">Contact</a></h2>
 
 		<footer class="site-footer">
 			{% include icon-github.html username=site.github_username username2=site.github_username github=site.project_page %}
