--- a/css/ideal-image-slider.css
+++ b/css/ideal-image-slider.css
@@ -5,7 +5,7 @@
  * http://gilbert.pellegrom.me
  *
  * Copyright (C) 2014 Dev7studios
- * https://raw.githubusercontent.com/gilbitron/Ideal-Image-Slider/master/LICENSE
+ * //raw.githubusercontent.com/gilbitron/Ideal-Image-Slider/master/LICENSE
  */
 
 .ideal-image-slider {
