--- a/_includes/header.html
+++ b/_includes/header.html
@@ -82,7 +82,7 @@
 					{% if page.title == "Changelog" %}<span id="rightnavtoggle" class="w3-opennav w3-xxlarge w3-display-topright w3-padding" onclick="openRightMenu()"><span class="w3-large w3-hide-small">VERSION: </span>&#9776;</span>{% endif %}
 					<h1 class="project-name"><a href="{{ site.baseurl }}/">{{ site.title }}</a><br><small>{{ page.title }}</small></h1>
 					<h2 class="project-tagline">{{ site.project_name }}<br>{{ site.description }}</h2>
-					<a href='http://dl.mazdatweaks.win' class="btn">AIO 2.7.2 <img src='//api.bintray.com/packages/trevelopment/MZD-AIO-TI/AIO/images/download.svg?version=MZD-AIO-TI'></a>
+					<a href='http://dl.mazdatweaks.win' class="btn">AIO {{site.version}}<img src='//api.bintray.com/packages/trevelopment/MZD-AIO-TI/AIO/images/download.svg?version=MZD-AIO-TI'></a>
 
 					<a href="//trevelopment.win/mazda3revolutionthread" class="btn">Mazda3Revolution</a>
 
