--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,12 +35,12 @@
   <link rel="stylesheet" type="text/css" href="{{ "/stylesheets/style.css" | prepend: site.baseurl | prepend: site.url }}" media="screen">
   <link rel="stylesheet" type="text/css" href="{{ "/css/featherlight.min.css" | prepend: site.baseurl | prepend: site.url }}" media="screen">
   <link rel="stylesheet" type="text/css" href="{{ "/css/featherlight.gallery.min.css" | prepend: site.baseurl | prepend: site.url }}" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ "/css/w3.css" | prepend: site.baseurl | prepend: site.url }}" media="screen">
   <!-- Compiled and minified CSS -->
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="//www.w3schools.com/lib/w3.css">
-  <script src="//www.w3schools.com/lib/w3data.js"></script>
-  <script   src="//code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+  <script src="//code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+  <script src="{{ "/js/w3data.js" | prepend: site.baseurl | prepend: site.url }}"></script>
   <script src="{{ "/js/featherlight.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
   <script src="{{ "/js/featherlight.gallery.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
   <link rel="stylesheet" type="text/css" href="{{ "/stylesheets/style.min.css" | prepend: site.baseurl | prepend: site.url }}" media="screen">
