--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
 	<a href="/videoplayer" class="w3-hover-green">VideoPlayer Info</a>
 	<a href="/speedo" class="w3-hover-green">Speedometer Info</a>
 	<a href="/castscreen" class="w3-hover-green">CastScreen-Receiver</a>
+	<a href="/serial" class="w3-hover-green">Serial Connection Instructions</a>
 	<!--a class=" w3-hover-green" href="./faq/"></a-->
 </nav>
 {% if page.title == "Changelog" %}
@@ -59,17 +60,8 @@
 					<div style="display:none;">
 						<div id="supported-fw">
 							<h2 id="which-fw-versions-are-supported">WHICH FW VERSIONS ARE SUPPORTED?:</h2>
-							<STRONG>ALL FW V55, V56, V58, AND V59 UP TO V59.00.504 ARE SUPPORTED</STRONG>
-							<h3 id="tweaks-have-been-tested-with-and-can-be-installed-on-the-following-firmware-versions">Tweaks have been tested with the following firmware versions:</h3>
-							<ul>
-								<li><strong>55.00.650A/753A/760A / 56.00.521A-NA(NA N)</strong></li>
-								<li><strong>56.00.100A/230A/240B/511A/512A/513C/514A-ADR(4A N)</strong></li>
-								<li><strong>56.00.100A/210A/230A/511A/512A/513A/513B/513C-EU</strong></li>
-								<li><strong>56.00.401A/403A-JP / 59.00.445A-JP / 56.00.100A-CHN</strong></li>
-								<li><strong>58.00.250A-NA(NA N) / 58.00.251A-ADR(4A N)</strong></li>
-								<li><strong>59.00.326A/330A/342A/442A/443C/449A/450A-ADR(4A N)</strong></li>
-								<li><strong>59.00.330A/441A/443A/446A/450A-NA(N NA)</strong></li>
-								<li><strong>59.00.330A/331A/443C/447A/449A-EU</strong></li>
+							<STRONG>ALL FW V55, V56, V58, AND V59 UP TO V59.00.500 ARE SUPPORTED
+							<br>TO INSTALL ON FW V59.00.502+ YOU MUST FIRST <a href="/serial/">MAKE A SERIAL CONNECTION (INSTRUCTIONS)</a></STRONG>
 							</ul>
 						</div>
 					</div>
