--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,7 @@
 <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.0/release/featherlight.min.css" type="text/css" rel="stylesheet" />
 <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/index.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/prism.js" type="text/javascript" charset="utf-8"></script>
 <script src="{{ site.base_url }}/js/totop.js"></script>
 <script>
 	w3IncludeHTML();
