--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" type="text/css" href="{{ "/css/featherlight.min.css" | prepend: site.baseurl | prepend: site.url }}" media="screen">
   <link rel="stylesheet" type="text/css" href="{{ "/css/featherlight.gallery.min.css" | prepend: site.baseurl | prepend: site.url }}" media="screen">
   <link rel="stylesheet" type="text/css" href="{{ "/css/w3.css" | prepend: site.baseurl | prepend: site.url }}" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ "/css/prism.css" | prepend: site.baseurl | prepend: site.url }}" media="screen">
   <!-- Compiled and minified CSS -->
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="//code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
