--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,7 +49,7 @@
   <style>
   @font-face {
     font-family: Mazda;
-    src: url(//trevelopment.com/SF_Automaton.ttf);
+    src: url('/images/SF_Automaton.ttf');
   }
   section.page-header, #mySidenav, .project-name {
     font-family: Mazda,"Segoe UI",Verdana,sans-serif;
