--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,10 +10,9 @@
 	{% endfor %}
 	<a class=" w3-hover-green" href="http://dl.mazdatweaks.win">Download</a>
 	<a class=" w3-hover-green" href="//trevelopment.win/mazda3revolutionthread">Thread</a>
-	<s><a class=" w3-hover-red" href="//trevelopment.win/githubsite">GitHub</a></s>
+	<a class="w3-hover-red" href="//trevelopment.win/github">GitHub</a>
 	<a href="/screenshots" class="w3-hover-green">Screenshots</a>
 	<a href="/videoplayer" class="w3-hover-green">VideoPlayer Info</a>
-	<a href="/speedo" class="w3-hover-green">Speedometer Info</a>
 	<a href="/castscreen" class="w3-hover-green">CastScreen-Receiver</a>
 	<a href="/serial" class="w3-hover-green">Serial Connection Instructions</a>
 	<!--a class=" w3-hover-green" href="./faq/"></a-->
@@ -52,7 +51,6 @@
       <a id="supported-fw-btn" class="supported-fw-btn w3-bar-item" style="cursor:pointer;">Supported Firmware</a>
       <a href="/screenshots" class="w3-bar-item">Screenshots</a>
       <a href="/videoplayer" class="w3-bar-item">VideoPlayer Info</a>
-      <a href="/speedo" class="w3-bar-item">Speedometer Info</a>
       <a href="/castscreen" class="w3-bar-item">CastScreen-Receiver</a>
   </div>
 
