--- a/_includes/header.html
+++ b/_includes/header.html
@@ -60,7 +60,6 @@
 							<h2 id="which-fw-versions-are-supported">WHICH FW VERSIONS ARE SUPPORTED?:</h2>
 							<STRONG>ALL FW V55, V56, V58, AND V59 UP TO V59.00.500 ARE SUPPORTED
 							<br>TO INSTALL ON FW V59.00.502+ YOU MUST FIRST <a href="/serial/">MAKE A SERIAL CONNECTION (INSTRUCTIONS)</a></STRONG>
-							</ul>
 						</div>
 					</div>
 				</div>
@@ -79,3 +78,4 @@
 					<s><a href="{{ site.project_page }}" class="btn">View on GitHub</a><br></s>
 
 				</section>
+</header>
