--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,13 +9,16 @@
 	{% endif %}
 	{% endfor %}
 	<a class=" w3-hover-green" href="http://dl.mazdatweaks.win">Download</a>
-	<a class=" w3-hover-green" href="//trevelopment.win/mazda3revolutionthread">Thread</a>
-	<a class="w3-hover-red" href="//trevelopment.win/github">GitHub</a>
+	<a class=" w3-hover-green" href="http://trevelopment.win/mazda3revolutionthread">Thread</a>
+	<a class="w3-hover-red" href="http://trevelopment.win/github">GitHub</a>
 	<a href="/screenshots" class="w3-hover-green">Screenshots</a>
 	<a href="/videoplayer" class="w3-hover-green">VideoPlayer Info</a>
 	<a href="/castscreen" class="w3-hover-green">CastScreen-Receiver</a>
 	<!--a class=" w3-hover-green" href="./faq/"></a-->
 </nav>
+<div class="w3-panel w3-container w3-red w3-center">
+    If MZD-AIO throws an error when opened, try turning off your internet connection, then launch AIO.  
+</div>
 {% if page.title == "Changelog" %}
 <nav class="w3-sidenav w3-black w3-text-shadow w3-card-2 w3-animate-right" style="display:none;right:0;" id="rightMenu">
 	<a href="javascript:void(0)" onclick="closeRightMenu()" class="w3-closenav w3-large version">
@@ -72,7 +75,7 @@
 					<h2 class="project-tagline">{{ site.project_name }}<br>{{ site.description }}</h2>
 					<a href='http://dl.mazdatweaks.win' class="btn">AIO {{site.version}}<img src='/images/download.svg?version=MZD-AIO-TI'></a>
 
-					<a href="//trevelopment.win/mazda3revolutionthread" class="btn">Mazda3Revolution</a>
+					<a href="http://trevelopment.win/mazda3revolutionthread" class="btn">Mazda3Revolution</a>
 
 					<s><a href="{{ site.project_page }}" class="btn">View on GitHub</a><br></s>
 </header>
