--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,8 @@
 	{% endif %}
 	{% endfor %}
 	<a class=" w3-hover-green" href="http://dl.mazdatweaks.win">Download</a>
-	<a class=" w3-hover-green" href="http://trevelopment.win/mazda3revolutionthread">Thread</a>
-	<a class="w3-hover-red" href="http://trevelopment.win/github">GitHub</a>
+	<a class=" w3-hover-green" href="https://www.mazda3revolution.com/threads/aio-all-in-one-tweaks.122458/">Thread</a>
+	<a class="w3-hover-red" href="https://github.com/Trevelopment/MZD-AIO">GitHub</a>
 	<a href="/screenshots" class="w3-hover-green">Screenshots</a>
 	<a href="/videoplayer" class="w3-hover-green">VideoPlayer Info</a>
 	<a href="/castscreen" class="w3-hover-green">CastScreen-Receiver</a>
@@ -72,7 +72,7 @@
 					<h2 class="project-tagline">{{ site.project_name }}<br>{{ site.description }}</h2>
 					<a href='http://dl.mazdatweaks.win' class="btn">AIO {{site.version}}<img src='/images/download.svg?version=MZD-AIO-TI'></a>
 
-					<a href="http://trevelopment.win/mazda3revolutionthread" class="btn">Mazda3Revolution</a>
+					<a href="https://www.mazda3revolution.com/threads/aio-all-in-one-tweaks.122458/" class="btn">Mazda3Revolution</a>
 
 					<s><a href="{{ site.project_page }}" class="btn">View on GitHub</a><br></s>
                     <div class="w3-panel w3-container w3-red w3-center ">
