--- a/_includes/header.html
+++ b/_includes/header.html
@@ -76,6 +76,6 @@
 
 					<s><a href="{{ site.project_page }}" class="btn">View on GitHub</a><br></s>
                     <div class="w3-panel w3-container w3-red w3-center ">
-                        If MZD-AIO throws an error when opened, try turning off your internet connection, then launch AIO.  
+                        If MZD-AIO throws an error when opened locate your hostfile (windows location: C:\Windows\System32\Drivers\etc\hosts) and add this line <code>0.0.0.0 translate.google.com</code>
                     </div>
 </header>
