--- a/_includes/header.html
+++ b/_includes/header.html
@@ -75,7 +75,7 @@
 					<a href="https://www.mazda3revolution.com/threads/aio-all-in-one-tweaks.122458/" class="btn">Mazda3Revolution</a>
 
 					<s><a href="{{ site.project_page }}" class="btn">View on GitHub</a><br></s>
-                    <div class="w3-panel w3-container w3-red w3-center ">
-                        If MZD-AIO throws an error when opened locate your hostfile (windows location: C:\Windows\System32\Drivers\etc\hosts) and add this line <code>0.0.0.0 translate.google.com</code>
+                    <div class="w3-panel w3-container w3-red w3-center w3-text-black">
+                        If MZD-AIO throws an error when opened locate your hostfile<br>(windows location: C:\Windows\System32\Drivers\etc\hosts) and add this line:<div class="w3-code">0.0.0.0 translate.google.com</div>
                     </div>
 </header>
